# tAIsty

./: .firebaserc  README.md
backend/: .env.sample  .gitignore  Dockerfile  README.md  debug_test_chat.py  debug_test_openai.py  debug_test_stream.py  docker-compose.yml  main.py  pyproject.toml
backend/app/: dependency.py  server.py
backend/app/chat/application/service/: chat_history_service.py  chatbot_service.py
backend/app/chat/domain/entity/: chat_history.py
backend/app/chat/domain/repository/: chat_history.py
backend/app/chat/interface/api/: __init__.py
backend/app/chat/utils/: constants.py  parse.py
backend/core/: config.py
backend/core/db/: session.py
backend/core/db/mixins/: __init__.py
backend/core/fastapi/middlewares/: __init__.py  response_log.py
backend/libs/connection/embedding/image/: clip_embedding_client.py  interface.py
backend/libs/connection/llm/: interface.py  openai_client.py
backend/libs/connection/vector/: interface.py  qdrant_client.py
backend/libs/repository/: interface.py  rdb_base_repo.py
backend/libs/service/llm/: __init__.py  llm_completion.py
backend/libs/service/prompt/: __init__.py  exceptions.py  interface.py  yaml_prompt_manager.py
backend/libs/service/prompt/utils/: read_yaml.py
backend/libs/service/vector/: __init__.py  vector_db.py
backend/libs/sse/: message.py
backend/libs/utils/: img.py  io.py
backend/prompts/: food_description.yaml  get_user_preferences.yaml  ori_recommendation.yaml  planner.yaml  recommendation.yaml  remove_user_preferences.yaml  test.yaml
bridge-server/: app.js  (+3 more)
(+10 files in other folders)
