[tool.poetry]
name = "india-hackathon-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.34"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
pydantic = "^2.9.0"
python-dotenv = "^1.0.1"
sseclient = "^0.0.27"
dependency-injector = "4.42.0b1"
pinecone = "^5.1.0"
openai = "^1.44.0"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
click = "^8.1.7"
pre-commit = "^3.8.0"
jinja2 = "^3.1.4"
qdrant-client = "^1.12.0"
python-multipart = "^0.0.12"
clip = {git = "https://github.com/openai/CLIP.git"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.6.4"
black = "^24.8.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 180  # 120 is too short for current device environment
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "W292"
]
extend-exclude = [
    ".venv",
    "debug*",
]
target-version = "py312"

[tool.black]
line-length = 120
target-version = ["py312"]
extend-exclude = '''
(
/.venv/|
)
'''

[tool.isort]
profile = "black"
skip_glob = ["venv", ".venv"]